Version 2.15
---------
 * Update Dockerfile and README

Version 2.14
---------
 * virtnbdrestore: Add option -A (--preallocate) to create thick, full
 pre-allocated target images during restore.

Version 2.13
---------
 * virtnbdbackup: If libvirt daemon is unreachable, it would fail with an
 misleading error code due exception not raised.
 * virtnbdbackup: setup callback function using registerCloseCallback, if
 libvirt connection drops during backup, re-establish the connection in order
 to stop leftover backup tasks
 * virtnbdbackup: catch exceptions if nbd read fails.
 * virtnbdrestore: add option -C to adjust config file name during restore.

Version 2.12
---------
 * Update README
 * virtnbdrestore: fix exception if no $HOME environment variable is set
 (#197)

Version 2.11
---------
 * Update README
 * Raise NBD connection error if `--tls` option is set but installed libnbd
 bindings for python do not support required features.
 * Set TLS connection options to TLS_REQUIRE instead of TLS_ALLOW which would
 fallback to non-encrypted data transfer.
 * If LIBNBD_DEBUG is set, add NBD trace messages to logfile.

Version 2.10
---------
 * Add --ssh-port option.

Version 2.9
---------
 * Fix: backup with compression enabled fails: unsupported operand type(s) for
 +: 'int' and 'dict' (#177)

Version 2.8
---------
 * Add packages compatible to fedora 39 to package build (#174)
 * Show total saved disk size in human readable output (#173)

Version 2.7
---------
 * Update README
 * End backup with warning if software emulated TPM device is attached
 (#169)
 * Detect remote connection based on libvirt URI, checking hostnames could lead
 to situation where local backup is detected as remote backup (#170)

Version 2.6
---------
 * Fix IndexError exception if auth file is used in qemu uri (#167)
 * Credential function for libvirt must return integer: fix NoneType
 exception if actual libvirt authentication is required.